Fix minor wrapping issues.

--- a/web-mod9/style.css
+++ b/web-mod9/style.css
@@ -54,10 +54,6 @@ img {
 	height:200px;
 }
 
-.img2 {
-
-}
-
 .navbar {
 	background-color:#FFFFFF;
 	margin-left:-20px;
@@ -106,9 +102,11 @@ img {
 	h1  {
 		font-size: 1.75em;
 	}
+
 	h3  {
 		font-size: 1.5em;
 	}
+	
 	.box {
 		font-size: .75em;
 	}
